# burn-the-haystack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/haystack/: ashes.rs  hay.rs  mod.rs
src/needle/: ipaddr.rs  location.rs  macaddr.rs  mod.rs  number.rs  timestamp.rs  variant.rs
src/needle/ipaddr/: mod.rs  variant.rs
src/needle/location/: mod.rs  variant.rs
src/needle/macaddr/: mod.rs  oui_lookup.rs  variant.rs
src/needle/number/: mod.rs  primitives.rs  variants.rs
src/needle/timestamp/: mod.rs  variants.rs
