[package]
name = "bth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
geo = "0.27.0"
integer-encoding = "4.0.0"
ipnet = "2.9.0"
itertools = "0.12.0"
mac_oui = { version = "0.4.10", features = ["with-db"] }
macaddr = "1.0.1"
measurements = "0.11.0"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
